--- a/ART 215/mystyle.css
+++ b/ART 215/mystyle.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 p{
     color: blue;
     text-align: center;
@@ -14,54 +13,50 @@ h1{
 
 body{
     background-color: grey;
-    width: 1200px;
-    height: 2500px;
 }
 
-.nav{
-    background-color: hotpink;
+header{
+    margin: auto;
+    background-color: #FFFFFF;
     width: 1200px;
     height: 170px;
 }
 
-.nav2{
-    background-color:navy;
+nav{
+    background-color:#DCDCDC;
     width: 1200px;
     height: 100px;
+    color: #000000;
+}
+
+.nav2{
+    background-color: #131A22;
+    width: 1200px;
+    height: 100px;
+    color: #FFFFFF;
+
 }
 
 .slider{
-    background-color:green;
+    background-color:FFFFFF;
     width: 1200px;
     height: 500px;
 }
 
-.nav3{
-    background-color:yellow;
-    width: 1200px;
-    height: 100px;
-}
-
-.photoHolder1{
-    background-color:brown;
+section{
+    background-color:FFFFFF;
     width: 1200px;
     height: 1100px;
 }
 
-.nav4{
-    background-color:yellow;
+article{
+    background-color:FFFFFF;
     width: 1200px;
-    height: 100px;
+    height: 435px;
 }
 
-.photoHolder2{
-    background-color:brown;
-    width: 1200px;
-    height: 370px;
-}
-
-.footer{
-    background-color:black;
+footer{
+    background-color:#131A22;
     width: 1200px;
     height: 100px;
     color: white;
@@ -72,14 +67,71 @@ body{
     height: 356px;
     background-color: white;
     margin-top: 65px;
-    margin-left: 32px;
-    margin-right: 32px;
-    margin-bottom: 32px;
-
+    
+    float: left;
 }
 
 .pictures2{
     width: 356px;
     height: 205px;
     background-color: white;
+    margin-top: 65px;
+    float: left;
+}
+.content{
+    max-width: 1200px;
+    max-height: auto;
+    margin: auto;
+    background-color: white;
+    padding: 5px;
+}
+
+.column{
+    width: 356px;
+    height: 1100px;
+    margin-left: 32px;
+    background-color: #FFFFFF;
+    float: left;
+}
+.column2{
+    width: 356px;
+    height: 435px;
+    margin-left: 32px;
+    background-color: #FFFFFF;
+    float: left;
+}
+
+.textbox{
+    width: 356px;
+    height: 95px;
+    background-color: teal;
+    float: left;
+}
+    
+.logo{
+    background-color: black;
+    width: 305px;
+    height: 95px;
+    margin-top: 45px;
+    margin-left: 30px;
+    float:left;
+}
+
+.searchbar{
+    background-color: green;
+    width: 470px;
+    height: 68px;
+    margin-top: 60px;
+    margin-left: 20px;
+    float: left;
+
+}
+
+.icons{
+    background-color:pink;
+    width: 95px;
+    height: 95px;
+    margin-top: 45px;
+    margin-left: 20px;
+    float: left;
 }
