--- a/ART 215/mystyle.css
+++ b/ART 215/mystyle.css
@@ -1,188 +1,263 @@
 @charset "UTF-8";
 
 body{
-    background-color: #FFFFFF;
-}
+    background-color: white;
+    margin: 0;
+    padding: 0;
 
-header{
-    margin: auto;
-    background-color: #FFFFFF;
-    width: 1200px;
-    height: 170px;
 }
 
 h1{ 
     font-family: Arial,'interstatelight_cond',sans-serif;
-    font-size: 30px;
+    font-size: 15px;
     font-weight: normal;
     font-style: normal;
     color: #000000;
 }
+
 h2{ 
     font-family: Arial,'interstatelight_cond',sans-serif;
-    font-size: 30px;
-    font-weight: normal;
-    font-style: normal;
-    color: #FFFFFF;
-}
-h3{
-    font-family: Arial,'interstatelight_cond',sans-serif;
-    font-size: 50px;
-    font-weight: normal;
-    font-style: normal;
-    color: #000000;
-}
-h4{
-    font-family: Arial,'interstatelight_cond',sans-serif;
-    font-size: 50px;
-    font-weight: normal;
-    font-style: normal;
-    color: #FFFFFF;
-}
-p{
-    color: #000000;
     font-size: 25px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-top: 0px;
+    padding: 12px;
+}
+
+p{
+    font-size: 15px;
+    font-family: Arial,'interstatelight_cond',sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    text-transform: uppercase;
+    color: #000000;
+    margin: 15px;
+    padding: 0px;
+    float: left;
+}
+
+header{
+    background-color: #FFFFFF;
+    width: 70%;
+    height: 12%;
+    margin: auto;
+    padding:0%;
 }
 
 nav{
     text-align: center;
     background-color:#DCDCDC;
-    width: 1200px;
-    height: 100px;
-    color: #000000;
-}
-
-.nav2{
-    text-align: center;
-    background-color: #131A22;
-    width: 1200px;
-    height: 100px;
-    color: #FFFFFF;
-
+    width: 70%;
+    height: 6%;
+    margin: auto;
+    margin-top: 0%;
+    padding: 0%;
 }
 
 .slider{
-    background-color:FFFFFF;
-    width: 1200px;
-    height: 500px;
+    background-color: yellow;
+    width: 70%;
+    height: 46%;
+    margin: auto;
 }
 
 section{
-    background-color:FFFFFF;
-    width: 1200px;
-    height: 1100px;
+    background-color: #FFFFFF;
+    width: 70%;
+    height: 100%;
+    margin: auto;
 }
 
 article{
-    background-color:FFFFFF;
-    width: 1200px;
-    height: 435px;
+    background-color: #FFFFFF;
+    width: 70%;
+    height: 35%;
+    margin: auto;
 }
 
 footer{
-    background-color:#131A22;
-    width: 1200px;
-    height: 100px;
+    background-color: #000000;
+    width: 70%;
+    height: 10%;
     color: white;
-}
-
-.pictures{
-    width: 356px;
-    height: 356px;
-    background-color: white;
-    margin-top: 65px;
-    
-    float: left;
-}
-
-.pictures2{
-    width: 356px;
-    height: 205px;
-    background-color: white;
-    margin-top: 65px;
-    float: left;
-}
-.content{
-    max-width: 1200px;
-    max-height: auto;
     margin: auto;
-    background-color: white;
-    padding: 5px;
+    
+}
+.squarePictures{
+    width: 100%;
+    height: 35%;
+    margin-top: 10%;
+    float: left;
+}
+
+.rectanglePictures{
+    width: 100%;
+    height: 57%;
+    margin-top: 10%;
+    float: left;
 }
 
 .column{
-    width: 356px;
-    height: 1100px;
-    margin-left: 32px;
-    background-color: #FFFFFF;
+    width: 30%;
+    height: 100%;
+    margin-left: 2.5%;
     float: left;
 }
 .column2{
-    width: 356px;
-    height: 435px;
-    margin-left: 32px;
-    background-color: #FFFFFF;
+    width: 30%;
+    height: 100%;
+    margin-left: 2.5%;
     float: left;
 }
 
 .textbox{
-    width: 356px;
-    height: 95px;
-    background-color: teal;
+    width: 100%;
+    height: 8%;
+    background-color: #FFFFFF;
     float: left;
 }
-    
+
+.textbox2{
+    width: 100%;
+    height: 25%;
+    background-color: #FFFFFF;
+    float: left;
+}
 .logo{
-    background-color: black;
-    width: 305px;
-    height: 95px;
-    margin-top: 45px;
-    margin-left: 30px;
+    background-color: #FFFFFF;
+    width: 20%;
+    height: 60%;
+    margin-top: 2.5%;
+    margin-left: 3%;
     float:left;
 }
 
 .searchbar{
-    background-color: green;
-    width: 470px;
-    height: 68px;
-    margin-top: 60px;
-    margin-left: 20px;
+    width: 38%;
+    height: 45%;
+    margin-top: 3%;
+    margin-left: 5%;
     float: left;
+}
 
+.search {
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+  
+.searchTerm {
+    width: 100%;
+    border: 3px solid #DCDCDC;
+    border-right: none;
+    padding: 5px;
+    height: 36px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    color: #9DBFAF;
+}
+  
+.searchTerm:focus{
+    color: #555;
+}
+  
+.searchButton {
+    width: 40px;
+    height: 36px;
+    border: 1px solid #DCDCDC;
+    background: #DCDCDC;
+    text-align: center;
+    color: #FFFFFF;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.iconHolder{
+    background-color:white;
+    width: 25%;
+    height: 65%;
+    margin-top: 1.5%;
+    margin-left: 5%;
+    float:left;
 }
 
 .icons{
     background-color:pink;
-    width: 95px;
-    height: 95px;
-    margin-top: 45px;
-    margin-left: 20px;
+    width: 20%;
+    height: 75%;
+    margin-left: 5%;
+    margin-top: 5%;
     float: left;
 }
 
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #DCDCDC;
-    
+img {
+    max-width: 100%;
+    height: auto;
 }
 
-li{
-    display: inline;
-}
 
-li a{
-    display: inline-block;
+nav ul,
+footer ul {
+    list-style: none;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    padding:0%;
+    margin: 0%;
 }
-
-
-
- 
-
+nav ul li,
+footer ul li {
+    display: inline-block;
+}
+nav ul li a,
+footer ul li a {
+    display: block;
+    padding-top: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 1px;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+}
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before,
+footer ul li a,
+footer ul li a:after,
+footer ul li a:before {
+    transition: all .5s;
+}
+nav ul li a:hover,
+footer ul li a:hover{
+    color: #555;
+}  
+  /* stroke */
+nav.stroke ul li a,
+nav.fill ul li a,
+footer.stroke ul li a,
+footer.fill ul li a  {
+    position: relative;
+}
+nav.stroke ul li a:after,
+nav.fill ul li a:after,
+footer.stroke ul li a:after,
+footer.fill ul li a:after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0%;
+    content: '.';
+    color: transparent;
+    background: #aaa;
+    height: 2px;
+}
+nav.stroke ul li a:hover:after,
+footer.stroke ul li a:hover:after {
+    width: 100%;
+}
