--- a/ART 215/mystyle.css
+++ b/ART 215/mystyle.css
@@ -52,8 +52,8 @@ nav{
     width: 70%;
     height: 6%;
     margin: auto;
-    margin-top: 0%;
-    padding: 0%;
+    margin-top: 0;
+    padding: 0;
 }
 
 .slider{
@@ -66,7 +66,7 @@ nav{
 section{
     background-color: #FFFFFF;
     width: 70%;
-    height: 100%;
+    height: 90%;
     margin: auto;
 }
 
@@ -185,7 +185,7 @@ footer{
 }
 
 .icons{
-    background-color:pink;
+    background-color: #FFFFFF;
     width: 20%;
     height: 75%;
     margin-left: 5%;
@@ -203,8 +203,8 @@ nav ul,
 footer ul {
     list-style: none;
     text-align: center;
-    padding:0%;
-    margin: 0%;
+    padding:0;
+    margin: 0;
 }
 nav ul li,
 footer ul li {
